--- a/hinder/pom.xml
+++ b/hinder/pom.xml
@@ -18,6 +18,7 @@
 <!--        <module>eureka</module>-->
 <!--        <module>gateway</module>-->
 <!--        <module>common</module>-->
+        <module>common</module>
     </modules>
     <properties>
         <java.version>21</java.version>
