--- a/hinder/pom.xml
+++ b/hinder/pom.xml
@@ -19,6 +19,7 @@
 <!--        <module>gateway</module>-->
 <!--        <module>common</module>-->
         <module>common</module>
+        <module>security</module>
     </modules>
     <properties>
         <java.version>21</java.version>
