创建feign-api模块，这是远程服务模块，提供微服务间的远程服务，配置了拦截器解决了远程调用的token令牌丢失导致的授权问题

--- a/hinder/pom.xml
+++ b/hinder/pom.xml
@@ -20,6 +20,7 @@
 <!--        <module>common</module>-->
         <module>common</module>
         <module>security</module>
+        <module>feign-api</module>
     </modules>
     <properties>
         <java.version>21</java.version>
