--- a/hinder/items-service/src/main/resources/application.yml
+++ b/hinder/items-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/test?useSSL=false
+    url: jdbc:mysql://localhost:3306/items-assigner?useSSL=false
     username: root
     password: Aa1341512355
     driver-class-name: com.mysql.cj.jdbc.Driver
