--- a/header-manager/package.json
+++ b/header-manager/package.json
@@ -14,6 +14,8 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "axios": "^1.12.2",
+    "element-plus": "^2.11.5",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
