--- a/hinder/items-service/pom.xml
+++ b/hinder/items-service/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>hinder</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>order-service</artifactId>
+    <artifactId>items-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
