--- a/hinder/pom.xml
+++ b/hinder/pom.xml
@@ -21,6 +21,10 @@
         <module>common</module>
         <module>security</module>
         <module>feign-api</module>
+        <module>items-service</module>
+        <module>user-service</module>
+        <module> gateway</module>
+        <module>eureka</module>
     </modules>
     <properties>
         <java.version>21</java.version>
