试图升级security,为了提高代码质量，降低维护难度，我在所有的userDetailService集中在security模块，其中遇到了远程调用问题：我想用springSecurity的UserDetail作为远程调用载体但发现无法作为传输载体，于是我重新设计了实体类以及允许匿名访问该接口才实现了远程调用验证逻辑的方法。接下来我要在网关层面屏蔽验证方法使得在生产环境只有网关暴露时避免暴露接口。实现集中userDetailService有助于提高代码质量，为后面实现多方式登录乃至优化认证授权业务打下基础

--- a/hinder/security/pom.xml
+++ b/hinder/security/pom.xml
@@ -27,6 +27,11 @@
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.wddyxd</groupId>
+            <artifactId>feign-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         
     </dependencies>
