--- a/hinder/pom.xml
+++ b/hinder/pom.xml
@@ -35,6 +35,9 @@
         <hutool.version>5.8.18</hutool.version>
         <fastjson.version>1.2.83</fastjson.version>
         <springdoc.version>2.2.0</springdoc.version>
+        <jjwt.version>0.9.0</jjwt.version>
+        <jaxb-api.version>2.3.1</jaxb-api.version>
+        <aspectjweaver.version>1.9.19</aspectjweaver.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -86,12 +89,17 @@
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
-                <version>0.9.0</version>
+                <version>${jjwt.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.xml.bind</groupId>
                 <artifactId>jaxb-api</artifactId>
-                <version>2.3.1</version>
+                <version>${jaxb-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectjweaver.version}</version>
             </dependency>
 
 
