--- a/hinder/user-service/pom.xml
+++ b/hinder/user-service/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>fastjson</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.wddyxd</groupId>
             <artifactId>security</artifactId>
             <version>0.0.1-SNAPSHOT</version>
