试图升级security，试图实现多端登录和token校验功能

--- a/hinder/user-service/src/main/resources/application.yml
+++ b/hinder/user-service/src/main/resources/application.yml
@@ -20,3 +20,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:10086/eureka/
+token:
+  signKey: 123456
+  expiration: 86400
