--- a/hinder/items-service/src/main/resources/application.yml
+++ b/hinder/items-service/src/main/resources/application.yml
@@ -20,3 +20,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:10086/eureka/
+token:
+  signKey: 123456
+  expiration: 86400
