--- a/hinder/pom.xml
+++ b/hinder/pom.xml
@@ -23,10 +23,13 @@
         <module>feign-api</module>
         <module>items-service</module>
         <module>user-service</module>
-        <module> gateway</module>
+        <module>gateway</module>
         <module>eureka</module>
     </modules>
+
     <properties>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <java.version>21</java.version>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
         <cloud-alibaba.version>2023.0.0.0-RC1</cloud-alibaba.version>
