--- a/hinder/eureka/src/main/resources/application.yml
+++ b/hinder/eureka/src/main/resources/application.yml
@@ -1,9 +1,3 @@
-server:
-  port: 10086
 spring:
-  application:
-    name: eureka-server
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:10086/eureka
+  profiles:
+    active: dev
