--- a/hinder/user-service/src/main/resources/application.yml
+++ b/hinder/user-service/src/main/resources/application.yml
@@ -1,25 +1,3 @@
-server:
-  port: 8080
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/items-assigner?useSSL=false
-    username: root
-    password: Aa1341512355
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  application:
-    name: user-service
-  data:
-    redis:
-      host: localhost
-      port: 6379
-      database: 3
-mybatis-plus:
-  type-aliases-package: com.wddyxd.userservice.pojo
-  mapper-locations: classpath*:mapper/*.xml
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:10086/eureka/
-token:
-  signKey: 123456
-  expiration: 86400000
+  profiles:
+    active: dev
