--- a/hinder/items-service/src/main/resources/application-test.yml
+++ b/hinder/items-service/src/main/resources/application-test.yml
@@ -1,17 +1,16 @@
 server:
   port: 8081
-
 spring:
+  application:
+    name: items-service  # 服务名固定
   datasource:
-    url: jdbc:mysql://192.168.174.129:3306/items-assigner?useSSL=false&allowPublicKeyRetrieval=true&useAffectedRows=true
+    url: jdbc:mysql://mysql:3306/items-assigner?useSSL=false&allowPublicKeyRetrieval=true&useAffectedRows=true
     username: root
     password: Aa1341512355
     driver-class-name: com.mysql.cj.jdbc.Driver
-  application:
-    name: items-service
   data:
     redis:
-      host: 192.168.174.129
+      host: redis
       port: 6379
       database: 3
 mybatis-plus:
@@ -19,7 +18,10 @@ mybatis-plus:
 eureka:
   client:
     service-url:
-      defaultZone: http://192.168.174.129:10086/eureka/
+      defaultZone: http://eureka-server:10086/eureka/
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
 token:
   signKey: 123456
   expiration: 86400000
