--- a/hinder/items-service/src/main/resources/application-test.yml
+++ b/hinder/items-service/src/main/resources/application-test.yml
@@ -25,3 +25,13 @@ eureka:
 token:
   signKey: 123456
   expiration: 86400000
+logging:
+  level:
+    com.wddyxd.itemsservice: debug
+    com.wddyxd.security: debug
+    com.wddyxd.common: debug
+  file:
+    path: /var/logs/itemsservice
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36}.%method:%line - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36}.%method:%line - %msg%n"
