--- a/hinder/items-service/src/main/resources/application-test.yml
+++ b/hinder/items-service/src/main/resources/application-test.yml
@@ -27,9 +27,9 @@ token:
   expiration: 86400000
 logging:
   level:
-    com.wddyxd.itemsservice: debug
-    com.wddyxd.security: debug
-    com.wddyxd.common: debug
+    com.wddyxd.itemsservice: WARN
+    com.wddyxd.security: WARN
+    com.wddyxd.common: WARN
   file:
     path: /var/logs/itemsservice
   pattern:
