--- a/hinder/user-service/src/main/resources/application-dev.yml
+++ b/hinder/user-service/src/main/resources/application-dev.yml
@@ -25,9 +25,9 @@ token:
   expiration: 86400000
 logging:
   level:
-    com.wddyxd.userservice: debug
-    com.wddyxd.security: debug
-    com.wddyxd.common: debug
+    com.wddyxd.userservice: WARN
+    com.wddyxd.security: WARN
+    com.wddyxd.common: WARN
   file:
     name: Log/user-service.log
   pattern:
