--- a/hinder/user-service/pom.xml
+++ b/hinder/user-service/pom.xml
@@ -12,9 +12,6 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
     </properties>
-<!--    <properties>-->
-<!--        <java.version>21</java.version>-->
-<!--    </properties>-->
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -42,6 +39,10 @@
             <groupId>com.wddyxd</groupId>
             <artifactId>security</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 
