--- a/hinder/user-service/src/main/resources/application-test.yml
+++ b/hinder/user-service/src/main/resources/application-test.yml
@@ -8,11 +8,30 @@ spring:
     username: root
     password: Aa1341512355
     driver-class-name: com.mysql.cj.jdbc.Driver
+    druid:
+      initial-size: 5
+      min-idle: 5
+      max-active: 20
+      max-wait: 60000
+      time-between-eviction-runs-millis: 60000
+      min-evictable-idle-time-millis: 300000
+      validation-query: SELECT 1
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+      pool-prepared-statements: true
+      max-pool-prepared-statement-per-connection-size: 20
   data:
     redis:
       host: redis  # docker内部用容器名redis访问
       port: 6379
       database: 3
+      lettuce:
+        pool:
+          max-active: 20
+          max-idle: 10
+          min-idle: 5
+          max-wait: 2000ms
 mybatis-plus:
   type-aliases-package: com.wddyxd.userservice.pojo
   mapper-locations: classpath*:mapper/*.xml
@@ -27,12 +46,4 @@ token:
   signKey: 123456
   expiration: 86400000
 logging:
-  level:
-    com.wddyxd.userservice: WARN
-    com.wddyxd.security: WARN
-    com.wddyxd.common: WARN
-  file:
-    path: /var/logs/userservice
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36}.%method:%line - %msg%n"
-    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36}.%method:%line - %msg%n"
+  config: classpath:logback-test.xml
