--- a/hinder/items-service/src/main/resources/application-test.yml
+++ b/hinder/items-service/src/main/resources/application-test.yml
@@ -8,19 +8,14 @@ spring:
     username: root
     password: Aa1341512355
     driver-class-name: com.mysql.cj.jdbc.Driver
-    druid:
-      initial-size: 5
-      min-idle: 5
-      max-active: 20
-      max-wait: 60000
-      time-between-eviction-runs-millis: 60000
-      min-evictable-idle-time-millis: 300000
-      validation-query: SELECT 1
-      test-while-idle: true
-      test-on-borrow: false
-      test-on-return: false
-      pool-prepared-statements: true
-      max-pool-prepared-statement-per-connection-size: 20
+    hikari:
+      minimum-idle: 5
+      maximum-pool-size: 20
+      auto-commit: true
+      idle-timeout: 30000
+      max-lifetime: 1800000
+      connection-timeout: 30000
+      pool-name: MyHikariCP
   data:
     redis:
       host: redis
