--- a/hinder/items-service/src/main/resources/application-dev.yml
+++ b/hinder/items-service/src/main/resources/application-dev.yml
@@ -28,6 +28,10 @@ spring:
           max-idle: 10
           min-idle: 5
           max-wait: 2000ms
+  cloud:
+    sentinel:
+      transport:
+        dashboard: localhost:8090
 mybatis-plus:
   type-aliases-package: com.wddyxd.itemsservice.pojo
 eureka:
