--- a/hinder/items-service/src/main/resources/application-dev.yml
+++ b/hinder/items-service/src/main/resources/application-dev.yml
@@ -29,15 +29,18 @@ spring:
           min-idle: 5
           max-wait: 2000ms
   cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
     sentinel:
       transport:
         dashboard: localhost:8090
 mybatis-plus:
   type-aliases-package: com.wddyxd.itemsservice.pojo
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:10086/eureka/
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:10086/eureka/
 token:
   signKey: 123456
   expiration: 86400000
