--- a/hinder/gateway/src/main/resources/application-dev.yml
+++ b/hinder/gateway/src/main/resources/application-dev.yml
@@ -32,12 +32,18 @@ spring:
             - Path=/api/user/**  # 添加/api前缀
           filters:
             - RewritePath=/api/(?<segment>.*), /$\{segment}  # 移除转发到服务的/api前缀
-        - id: items-service
-          uri: lb://items-service
+#        - id: items-service
+#          uri: lb://items-service
+#          predicates:
+#            - Path=/api/items/**  # 添加/api前缀
+#          filters:
+#            - RewritePath=/api/(?<segment>.*), /$\{segment}  # 移除转发到服务的/api前缀
+        - id: product-service
+          uri: lb://product-service
           predicates:
-            - Path=/api/items/**  # 添加/api前缀
+            - Path=/api/product/**
           filters:
-            - RewritePath=/api/(?<segment>.*), /$\{segment}  # 移除转发到服务的/api前缀
+            - RewritePath=/api/(?<segment>.*), /$\{segment}
 
       globalcors:
         corsConfigurations:
