--- a/hinder/pom.xml
+++ b/hinder/pom.xml
@@ -17,6 +17,9 @@
         <module>security</module>
         <module>feign-api</module>
         <module>items-service</module>
+        <module>product-service</module>
+        <module>order-service</module>
+        <module>chat-service</module>
         <module>user-service</module>
         <module>gateway</module>
         <module>eureka</module>
