--- a/hinder/pom.xml
+++ b/hinder/pom.xml
@@ -39,6 +39,7 @@
         <jjwt.version>0.9.0</jjwt.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
         <aspectjweaver.version>1.9.19</aspectjweaver.version>
+        <validation.version>3.2.0</validation.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -96,6 +97,11 @@
                 <groupId>org.aspectj</groupId>
                 <artifactId>aspectjweaver</artifactId>
                 <version>${aspectjweaver.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
+                <version>${validation.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
