进行接口测试,在测试updateAvatar业务前要完成文件操作业务,首先要准备一个叫file-service的模块

--- a/hinder/gateway/src/main/resources/application-test.yml
+++ b/hinder/gateway/src/main/resources/application-test.yml
@@ -55,6 +55,13 @@ spring:
             - Path=/api/chat/**
           filters:
             - RewritePath=/api/(?<segment>.*), /$\{segment}
+        - id: file-service
+          uri: lb://file-service
+          predicates:
+            - Path=/api/file/**
+          filters:
+            - RewritePath=/api/(?<segment>.*), /$\{segment}
+
 
       globalcors:
         corsConfigurations:
