--- a/hinder/gateway/src/main/resources/application-dev.yml
+++ b/hinder/gateway/src/main/resources/application-dev.yml
@@ -72,6 +72,12 @@ spring:
             - Path=/api/chat/**
           filters:
             - RewritePath=/api/(?<segment>.*), /$\{segment}
+        - id: file-service
+          uri: lb://file-service
+          predicates:
+            - Path=/api/file/**
+          filters:
+            - RewritePath=/api/(?<segment>.*), /$\{segment}
 
 
       globalcors:
