--- a/hinder/pom.xml
+++ b/hinder/pom.xml
@@ -23,6 +23,7 @@
         <module>user-service</module>
         <module>gateway</module>
         <module>eureka</module>
+        <module>file-service</module>
     </modules>
 
     <properties>
@@ -103,6 +104,7 @@
                 <artifactId>spring-boot-starter-validation</artifactId>
                 <version>${validation.version}</version>
             </dependency>
+
         </dependencies>
     </dependencyManagement>
 
