进行接口测试,已完成user模块的测试

--- a/hinder/product-service/src/main/resources/application-dev.yml
+++ b/hinder/product-service/src/main/resources/application-dev.yml
@@ -16,7 +16,7 @@ spring:
       connection-timeout: 30000
       pool-name: MyHikariCP
   application:
-    name: file-service
+    name: product-service
   data:
     redis:
       host: localhost
