--- a/hinder/order-service/pom.xml
+++ b/hinder/order-service/pom.xml
@@ -56,6 +56,19 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
+        <!-- Spring StateMachine Core -->
+        <dependency>
+            <groupId>org.springframework.statemachine</groupId>
+            <artifactId>spring-statemachine-core</artifactId>
+            <version>3.2.0</version> <!-- 适配 Spring Boot 3.2.0 -->
+        </dependency>
+
+        <!-- 可选：如果需要使用 Spring StateMachine 的 Spring Boot Starter 自动配置 -->
+        <dependency>
+            <groupId>org.springframework.statemachine</groupId>
+            <artifactId>spring-statemachine-starter</artifactId>
+            <version>3.2.0</version>
+        </dependency>
 
 
     </dependencies>
