发起订单接口接入消息队列

--- a/hinder/order-service/pom.xml
+++ b/hinder/order-service/pom.xml
@@ -78,6 +78,11 @@
             <artifactId>alipay-easysdk</artifactId>
             <version>2.2.0</version> <!-- 请使用最新版本 -->
         </dependency>
+        <!-- RabbitMQ 消息队列 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
 
 
     </dependencies>
