--- a/hinder/pom.xml
+++ b/hinder/pom.xml
@@ -41,6 +41,7 @@
         <jaxb-api.version>2.3.1</jaxb-api.version>
         <aspectjweaver.version>1.9.19</aspectjweaver.version>
         <validation.version>3.2.0</validation.version>
+        <seata.version>1.4.2</seata.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -104,7 +105,11 @@
                 <artifactId>spring-boot-starter-validation</artifactId>
                 <version>${validation.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>io.seata</groupId>
+                <artifactId>seata-spring-boot-starter</artifactId>
+                <version>${seata.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
