--- a/hinder/file-service/src/main/resources/application-test.yml
+++ b/hinder/file-service/src/main/resources/application-test.yml
@@ -93,18 +93,18 @@ spring:
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml # Mapper XML文件路径（若使用XML编写SQL需配置）
   type-aliases-package: com.wddyxd.fileservice.pojo # 实体类包路径（替换为你的实际包路径）
-#seata:
-#  data-source-proxy-mode: AT
-#  registry: # TC服务注册中心的配置，微服务根据这些信息去注册中心获取tc服务地址
-#    # 参考tc服务自己的registry.conf中的配置
-#    type: nacos
-#    nacos: # tc
-#      server-addr: 127.0.0.1:8848
-#      namespace: ""
-#      group: DEFAULT_GROUP
-#      application: seata-server # tc服务在nacos中的服务名称
-#      cluster: default
-#  tx-service-group: seata-demo # 事务组，根据这个获取tc服务的cluster名称
-#  service:
-#    vgroup-mapping: # 事务组与TC服务cluster的映射关系
-#      seata-demo: default
+seata:
+  data-source-proxy-mode: AT
+  registry: # TC服务注册中心的配置，微服务根据这些信息去注册中心获取tc服务地址
+    # 参考tc服务自己的registry.conf中的配置
+    type: nacos
+    nacos: # tc
+      server-addr: 127.0.0.1:8848
+      namespace: ""
+      group: DEFAULT_GROUP
+      application: seata-server # tc服务在nacos中的服务名称
+      cluster: default
+  tx-service-group: items-assigner # 事务组，根据这个获取tc服务的cluster名称
+  service:
+    vgroup-mapping: # 事务组与TC服务cluster的映射关系
+      items-assigner: default
