--- a/hinder/order-service/src/main/resources/application-dev.yml
+++ b/hinder/order-service/src/main/resources/application-dev.yml
@@ -60,7 +60,7 @@ seata:
       group: DEFAULT_GROUP
       application: seata-server # tc服务在nacos中的服务名称
       cluster: default
-  tx-service-group: seata-demo # 事务组，根据这个获取tc服务的cluster名称
+  tx-service-group: items-assigner # 事务组，根据这个获取tc服务的cluster名称
   service:
     vgroup-mapping: # 事务组与TC服务cluster的映射关系
-      seata-demo: default
+      items-assigner: default
